force-app/main/default/objects/tc9_util__Kilometre_Settings__c/tc9_util__Kilometre_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>2c9 - ATO Kilometre Settings</label>
</CustomObject>