force-app/main/default/objects/tc9_util__Kilometre_Settings__c/fields/tc9_util__ATO_KM_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__ATO_KM_Rate__c</fullName>
    <label>ATO KM Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>