force-app/main/default/objects/tc9_util__Kilometre_Settings__c/fields/tc9_util__Pre_Tax_Paycode__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Pre_Tax_Paycode__c</fullName>
    <label>Pre Tax Paycode</label>
    <length>200</length>
    <type>Text</type>
</CustomField>